Corrigiendo psr estandar

--- a/Aeropuerto/Readme.html
+++ b/Aeropuerto/Readme.html
@@ -4,7 +4,7 @@ SERVICIOS:
 
 -   VueloServicio.php
     - public function __construct($collection)
-    - public function avilitarNuevoAvion(int $puestos, string $ubicacion): int //0 si no se insertó o 1 si se insertó
+    - public function habilitarNuevoAvion(int $puestos, string $ubicacion): int //0 si no se insertó o 1 si se insertó
     - public function buscarAvionSinVuelo($ubicacion): Avion | AvionFalse
     - public function buscarAvionPorVueloId($$idVuelo): Avion | AvionFalse
     - public function asignarVuelo($idVuelo, $ubicacion, $destino): Avion | AvionFalse
